[tool.poetry]
name = "ketlms-dist-tool"
version = "0.1.0"
description = ""
authors = ["NXVZBGBFBEN <NXVZBGBFBEN@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pysen = "^0.10.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
